# NekoWG

./: Cargo.toml  UPSTREAM_ZED_COMMIT  rust-toolchain.toml
.github/workflows/: check.yml  gpu-surface-macos.yml
crates/collections/: Cargo.toml
crates/http_client/: Cargo.toml
crates/http_client/src/: http_client.rs
crates/nekowg/: Cargo.toml  README.md  build.rs
crates/nekowg/docs/: contexts.md  graphics_api_draft.md  key_dispatch.md
crates/nekowg/examples/: active_state_bug.rs  animation.rs  backdrop_blur.rs  data_table.rs  drag_drop.rs  focus_visible.rs  gif_viewer.rs  gpu_primitive.rs  gpu_surface.rs  gradient.rs  grid_layout.rs  hello_world.rs  image_gallery.rs  image_loading.rs  input.rs  layer_shell.rs  mouse_pressure.rs  on_window_close_quit.rs  opacity.rs  ownership_post.rs  painting.rs  paths_bench.rs  pattern.rs  popover.rs  scrollable.rs  set_menus.rs  shadow.rs  tab_stop.rs  testing.rs  text.rs  text_layout.rs  text_wrapper.rs  tree.rs  uniform_list.rs  window.rs  window_positioning.rs  window_shadow.rs
crates/nekowg/examples/image/: image.rs
crates/nekowg/examples/svg/: svg.rs
crates/nekowg/resources/windows/: nekowg.rc
crates/nekowg/src/: _ownership_and_data_flow.rs  action.rs  app.rs  assets.rs  color.rs  colors.rs  element.rs  executor.rs  geometry.rs  global.rs  gpu.rs  interactive.rs  key_dispatch.rs  keymap.rs  nekowg.rs  platform.rs  platform_scheduler.rs  prelude.rs  scene.rs  shared_string.rs  style.rs  styled.rs  subscription.rs  svg_renderer.rs  tab_stop.rs  taffy.rs  test.rs  text_system.rs  util.rs  window.rs
crates/nekowg/src/app/: async_context.rs  context.rs  entity_map.rs  test_context.rs  visual_test_context.rs
crates/nekowg/src/elements/: animation.rs  div.rs  gpu_surface.rs  image_cache.rs  img.rs  list.rs  mod.rs  svg.rs  text.rs  uniform_list.rs
crates/nekowg/src/keymap/: context.rs
crates/nekowg/src/platform/: app_menu.rs  keystroke.rs  scap_screen_capture.rs
crates/nekowg/src/platform/test/: window.rs
crates/nekowg/src/text_system/: line_wrapper.rs
crates/nekowg/src/window/: prompts.rs
crates/nekowg/tests/: action_macros.rs
crates/nekowg_linux/: Cargo.toml
crates/nekowg_linux/src/: linux.rs
crates/nekowg_linux/src/linux/: dispatcher.rs  keyboard.rs  platform.rs  text_system.rs  wayland.rs  xdg_desktop_portal.rs
crates/nekowg_linux/src/linux/headless/: client.rs
crates/nekowg_linux/src/linux/wayland/: client.rs  clipboard.rs  display.rs  layer_shell.rs  window.rs
crates/nekowg_linux/src/linux/x11/: client.rs  clipboard.rs  display.rs  event.rs  window.rs
crates/nekowg_macos/: Cargo.toml  build.rs
crates/nekowg_macos/src/: dispatcher.rs  display.rs  display_link.rs  events.rs  keyboard.rs  metal_atlas.rs  metal_renderer.rs  nekowg_macos.rs  open_type.rs  pasteboard.rs  platform.rs  renderer.rs  screen_capture.rs  shaders.metal  text_system.rs  window.rs  window_appearance.rs
crates/nekowg_macros/: Cargo.toml
crates/nekowg_macros/src/: derive_action.rs  derive_app_context.rs  derive_inspector_reflection.rs  derive_into_element.rs  derive_render.rs  derive_visual_context.rs  nekowg_macros.rs  property_test.rs  register_action.rs  styles.rs  test.rs
crates/nekowg_macros/tests/: derive_context.rs  derive_inspector_reflection.rs  render_test.rs
crates/nekowg_platform/: Cargo.toml
crates/nekowg_platform/src/: nekowg_platform.rs
crates/nekowg_util/: Cargo.toml
crates/nekowg_util/src/: lib.rs
crates/nekowg_web/: Cargo.toml
crates/nekowg_web/examples/hello_web/: Cargo.toml  index.html  main.rs
crates/nekowg_web/src/: dispatcher.rs  display.rs  events.rs  keyboard.rs  platform.rs  window.rs
crates/nekowg_wgpu/: Cargo.toml
crates/nekowg_wgpu/src/: cosmic_text_system.rs  shaders.wgsl  wgpu_atlas.rs  wgpu_context.rs  wgpu_renderer.rs
crates/nekowg_windows/: Cargo.toml  build.rs
crates/nekowg_windows/src/: clipboard.rs  destination_list.rs  direct_write.rs  directx_atlas.rs  directx_devices.rs  directx_renderer.rs  dispatcher.rs  display.rs  events.rs  keyboard.rs  platform.rs  shaders.hlsl  util.rs  window.rs
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: reqwest_client.rs
crates/scheduler/src/: test_scheduler.rs
crates/sum_tree/: Cargo.toml
crates/sum_tree/src/: cursor.rs  sum_tree.rs
crates/util/: Cargo.toml
crates/util/src/: paths.rs  test.rs  util.rs
crates/util_macros/src/: util_macros.rs
docs/: FORK_WORKFLOW.md  README.md
scripts/: _gpui_subset.ps1  sync-from-zed.ps1  update-upstream-main.ps1
tooling/perf/src/: implementation.rs  main.rs
