[package]
name = "nekowg_macos"
version.workspace = true
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/nekowg_macos.rs"

[features]
default = ["nekowg/default"]
test-support = ["nekowg/test-support"]
runtime_shaders = []
font-kit = ["dep:font-kit"]
screen-capture = ["nekowg/screen-capture"]

[dependencies]
nekowg.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
anyhow.workspace = true
async-task = "4.7"
block = "0.1"
cocoa.workspace = true
collections.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
core-graphics = "0.24"
core-text = "21"
core-video.workspace = true
ctor.workspace = true
derive_more.workspace = true
dispatch2 = "0.3.1"
etagere = "0.2"
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }
foreign-types = "0.5"
futures.workspace = true
image.workspace = true
itertools.workspace = true
libc.workspace = true
log.workspace = true
mach2.workspace = true
media.workspace = true
metal.workspace = true
naga = { workspace = true, features = ["msl-out"] }
objc.workspace = true
parking_lot.workspace = true
pathfinder_geometry = "0.5"
raw-window-handle = "0.6"
semver.workspace = true
smallvec.workspace = true
strum.workspace = true
util.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "macos")'.build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }
nekowg.workspace = true
