[package]
name = "nekowg_macros"
version.workspace = true
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "Macros used by nekowg"

[lints]
workspace = true

[features]
inspector = []

[lib]
path = "src/nekowg_macros.rs"
proc-macro = true
doctest = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
nekowg = { workspace = true, features = ["inspector"] }
