[package]
name = "nekowg_windows"
version.workspace = true
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/nekowg_windows.rs"

[features]
default = ["nekowg/default"]
test-support = ["nekowg/test-support"]
screen-capture = ["nekowg/screen-capture", "scap"]

[dependencies]
nekowg.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
anyhow.workspace = true
collections.workspace = true
etagere = "0.2"
futures.workspace = true
image.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
raw-window-handle = "0.6"
smallvec.workspace = true
naga = { workspace = true, features = ["hlsl-out"] }
util.workspace = true
uuid.workspace = true
windows.workspace = true
windows-core.workspace = true
windows-numerics = "0.2"
windows-registry = "0.5"

[target.'cfg(target_os = "windows")'.dependencies.scap]
workspace = true
optional = true

[target.'cfg(target_os = "windows")'.build-dependencies]
windows-registry = "0.5"
