[workspace]

[package]
name = "hello_web"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "hello_web"
path = "main.rs"

[dependencies]
nekowg = { package = "nekowg", path = "../../../nekowg" }
nekowg_platform = { package = "nekowg_platform", path = "../../../nekowg_platform" }
web-time = "1"
